--- a/Streamlit_folder/config.toml
+++ b/Streamlit_folder/config.toml
@@ -2,7 +2,8 @@
 
 # Used to style primary interface elements. It's the color displayed most frequently across your app's
 # screens and components. Examples of widgets using this color are st.slider and st.checkbox.
-primaryColor = "#C93E3E" # soft red
+primaryColor = "#EF0303" #red
+#"#C93E3E" # soft red
 
 # Background color for the main container.
 backgroundColor = "rgba(254,248,239,1)" # sepia yellow
@@ -12,7 +13,8 @@ backgroundColor = "rgba(254,248,239,1)" # sepia yellow
 secondaryBackgroundColor =  "#ebd2b9" # wheat  "#d7ab82" # yellow <-- not enough contrast
 
 # Font color for the page.
-textColor = "#6e7074" # grey
+textColor = "#000000" #black
+#"#6e7074" # grey
 
 # Font family (serif | sans serif | mono) for the page. Will not impact code areas.
 # Default: "sans serif"
