--- a/Streamlit_folder/requirements.txt
+++ b/Streamlit_folder/requirements.txt
@@ -1,8 +1,10 @@
 streamlit==1.12.0
-pandas==1.4.2
+pandas==1.5.3
 matplotlib==3.5.1
 sklearn==0.0
 folium==0.12.1.post1
 geopandas==0.11.1
 streamlit_folium==0.6.15
 statsmodels==0.13.2
+numpy==1.24.2
+joblib==1.2.0
