--- a/Streamlit_folder/requirements.txt
+++ b/Streamlit_folder/requirements.txt
@@ -1,4 +1,4 @@
-streamlit==1.12.0
+streamlit==1.20.0
 pandas==1.5.3
 matplotlib==3.5.1
 sklearn==0.0
@@ -8,3 +8,4 @@ streamlit_folium==0.6.15
 statsmodels==0.13.2
 numpy==1.24.2
 joblib==1.2.0
+scikit-learn==1.2.2
