--- a/Streamlit_folder/.streamlit/config.toml
+++ b/Streamlit_folder/.streamlit/config.toml
@@ -7,7 +7,7 @@ primaryColor = "#EF0303" #red
 
 # Background color for the main container.
 backgroundColor = '#8C7340'
-'#704214' #sepia yello hex code
+#"704214" #sepia yello hex code
 #"rgba(254,248,239,1)" # sepia yellow
 
 # Used as the background for most widgets. Examples of widgets with this background are st.sidebar,
