--- a/Streamlit_folder/config.toml
+++ b/Streamlit_folder/config.toml
@@ -1,15 +1,14 @@
 [theme]
 
-# Used to style primary interface elements. It's the color displayed most frequently across your app's
-# screens and components. Examples of widgets using this color are st.slider and st.checkbox.
+# Used to style primary interface elements.
 primaryColor = "#EF0303" #red
 #"#C93E3E" # soft red
 
 # Background color for the main container.
-backgroundColor = "rgba(254,248,239,1)" # sepia yellow
+backgroundColor = '#704214' #sepia yello hex code
+#"rgba(254,248,239,1)" # sepia yellow
 
-# Used as the background for most widgets. Examples of widgets with this background are st.sidebar,
-# st.text_input, st.date_input.
+# Used as the background for most widgets.
 secondaryBackgroundColor =  "#ebd2b9" # wheat  "#d7ab82" # yellow <-- not enough contrast
 
 # Font color for the page.
