--- a/Streamlit_folder/.streamlit/config.toml
+++ b/Streamlit_folder/.streamlit/config.toml
@@ -6,10 +6,8 @@ primaryColor = "#EF0303" #red
 #"#C93E3E" # soft red
 
 # Background color for the main container.
-backgroundColor = '#8C7340'
-#"704214" #sepia yello hex code
-#"rgba(254,248,239,1)" # sepia yellow
-
+backgroundColor = "rgba(254,248,239,1)" # sepia yellow
+#"704214" #sepia yello hex code 
 # Used as the background for most widgets. Examples of widgets with this background are st.sidebar,
 # st.text_input, st.date_input.
 secondaryBackgroundColor =  "#ebd2b9" # wheat  "#d7ab82" # yellow <-- not enough contrast
