--- a/Streamlit_folder/requirements.txt
+++ b/Streamlit_folder/requirements.txt
@@ -1,8 +1,12 @@
 streamlit==1.12.0
-pandas==1.4.2
-matplotlib==3.5.1
+pandas==1.5.3
+matplotlib==3.7.1
 sklearn==0.0
 folium==0.12.1.post1
 geopandas==0.11.1
 streamlit_folium==0.6.15
 statsmodels==0.13.2
+seaborn==0.12.2
+scikit-learn==1.2.2
+plotly==5.13.1
+numpy==1.24.2
